# quill

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  package.json
.github/workflows/: ci.yml
completions/: quill.bash  quill.fish  quill.zsh
docs/: ecosystem-pain-points.md
quill/: Cargo.toml
quill/src/: cli.rs  context.rs  error.rs  main.rs
scripts/: install.ps1  install.sh
src/: cli.rs  cli.ts  context.rs  error.rs  exports.rs  lockfile.ts  main.rs  resolve.rs  resolve.ts
src/audit/: bytecode.ts  checksum.rs  checksum.ts  vulnerabilities.ts
src/cache/: commands.ts  manifest.ts  mod.rs  util.ts
src/commands/: add.rs  add.ts  audit.rs  audit.ts  build.rs  cache_info.rs  clean.rs  clean.ts  completions.ts  doctor.ts  info.rs  info.ts  init.ts  ink-build.ts  ink-check.ts  ink-new.ts  install.rs  install.ts  login.rs  login.ts  logout.rs  ls.rs  ls.ts  mod.rs  new.rs  new.ts  outdated.rs  outdated.ts  pack.rs  pack.ts  publish.rs  publish.ts  remove.rs  remove.ts  run.rs  run.ts  search.rs  search.ts  setup.ts  test.ts  (+6 more)
src/grammar/: api.ts  ir.ts  merge.rs  merge.ts  mod.rs  serializer.ts  validator.rs  validator.ts
src/manifest/: mod.rs  toml.rs
src/model/: manifest.ts  semver.ts
src/printing_press/: mod.rs
src/registry/: auth.rs  client.rs  client.ts  index.rs  mod.rs
src/ui/: ascii.ts  colors.ts  spinner.ts
src/util/: compiler.ts  doctor.ts  fs.rs  fs.ts  import-graph.ts  keys.ts  mod.rs  semver.rs  server-setup.ts  (+5 more)
tests/: fs.test.ts  lockfile.test.ts  registry.test.ts  resolve.test.ts  semver.test.ts  toml.test.ts
(+205 files in other folders)
