[package]
name = "quill"
version = "0.1.0"
edition = "2021"
description = "The Ink package manager"
repository = "https://github.com/inklang/quill"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
ed25519-dalek = { version = "2.1", features = ["pkcs8"] }
sha2 = "0.10"
flate2 = "1.0"
tar = "0.4"
open = "5.0"
ratatui = "0.28"
crossterm = "0.27"
indicatif = "0.17"
async-trait = "0.1"
base64 = "0.22"
thiserror = "1.0"
semver = "1.0"
rand = "0.8"
futures-util = "0.3"
urlencoding = "2.1"
hex = "0.4"
pkcs8 = "0.10"
clap_complete = "4.5"

[dev-dependencies]
tempfile = "3.12"
wiremock = "0.6"
